projet-ansible-k8s/promotheus - grafana/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2  # 2 instances pour la tolérance aux pannes
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: zouboss/projetfilrouge_backend:prometheus
        command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30081
  type: NodePort
